@@ -40,6 +40,20 @@ name|apache
 operator|.
 name|commons
 operator|.
+name|codec
+operator|.
+name|Charsets
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
 name|io
 operator|.
 name|FileUtils
@@ -66,9 +80,77 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|embedded
+operator|.
+name|JettySolrRunner
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|HttpSolrServer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|CoreAdminRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|SolrException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrInputDocument
 import|;
 end_import
 
@@ -1302,6 +1384,322 @@ argument_list|(
 name|workDir
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testDeleteInstanceDir
+specifier|public
+name|void
+name|testDeleteInstanceDir
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|File
+name|solrHomeDirectory
+init|=
+operator|new
+name|File
+argument_list|(
+name|TEMP_DIR
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"-corex-"
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|solrHomeDirectory
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+name|copySolrHomeToTemp
+argument_list|(
+name|solrHomeDirectory
+argument_list|,
+literal|"corex"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|File
+name|corex
+init|=
+operator|new
+name|File
+argument_list|(
+name|solrHomeDirectory
+argument_list|,
+literal|"corex"
+argument_list|)
+decl_stmt|;
+name|FileUtils
+operator|.
+name|write
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|corex
+argument_list|,
+literal|"core.properties"
+argument_list|)
+argument_list|,
+literal|""
+argument_list|,
+name|Charsets
+operator|.
+name|UTF_8
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|JettySolrRunner
+name|runner
+init|=
+operator|new
+name|JettySolrRunner
+argument_list|(
+name|solrHomeDirectory
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+literal|"/solr"
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|HttpSolrServer
+name|server
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|runner
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|server
+operator|=
+operator|new
+name|HttpSolrServer
+argument_list|(
+literal|"http://localhost:"
+operator|+
+name|runner
+operator|.
+name|getLocalPort
+argument_list|()
+operator|+
+literal|"/solr/corex"
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|setConnectionTimeout
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|DEFAULT_CONNECTION_TIMEOUT
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|setSoTimeout
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|DEFAULT_CONNECTION_TIMEOUT
+argument_list|)
+expr_stmt|;
+name|SolrInputDocument
+name|doc
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"123"
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|add
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|server
+operator|=
+operator|new
+name|HttpSolrServer
+argument_list|(
+literal|"http://localhost:"
+operator|+
+name|runner
+operator|.
+name|getLocalPort
+argument_list|()
+operator|+
+literal|"/solr"
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|setConnectionTimeout
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|DEFAULT_CONNECTION_TIMEOUT
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|setSoTimeout
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|DEFAULT_CONNECTION_TIMEOUT
+argument_list|)
+expr_stmt|;
+name|CoreAdminRequest
+operator|.
+name|Unload
+name|req
+init|=
+operator|new
+name|CoreAdminRequest
+operator|.
+name|Unload
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+name|req
+operator|.
+name|setDeleteInstanceDir
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|setCoreName
+argument_list|(
+literal|"corex"
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|process
+argument_list|(
+name|server
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|runner
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"Instance directory exists after core unload with deleteInstanceDir=true : "
+operator|+
+name|corex
+argument_list|,
+name|corex
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Exception testing core unload with deleteInstanceDir=true"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|server
+operator|!=
+literal|null
+condition|)
+block|{
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|runner
+operator|.
+name|isStopped
+argument_list|()
+condition|)
+block|{
+name|runner
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+name|recurseDelete
+argument_list|(
+name|solrHomeDirectory
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
