@@ -1922,9 +1922,14 @@ name|boolean
 name|deleteIndex
 decl_stmt|;
 DECL|field|deleteDataDir
-specifier|private
+specifier|protected
 name|boolean
 name|deleteDataDir
+decl_stmt|;
+DECL|field|deleteInstanceDir
+specifier|protected
+name|boolean
+name|deleteInstanceDir
 decl_stmt|;
 DECL|method|Unload
 specifier|public
@@ -1989,6 +1994,42 @@ operator|=
 name|deleteDataDir
 expr_stmt|;
 block|}
+DECL|method|setDeleteInstanceDir
+specifier|public
+name|void
+name|setDeleteInstanceDir
+parameter_list|(
+name|boolean
+name|deleteInstanceDir
+parameter_list|)
+block|{
+name|this
+operator|.
+name|deleteInstanceDir
+operator|=
+name|deleteInstanceDir
+expr_stmt|;
+block|}
+DECL|method|isDeleteDataDir
+specifier|public
+name|boolean
+name|isDeleteDataDir
+parameter_list|()
+block|{
+return|return
+name|deleteDataDir
+return|;
+block|}
+DECL|method|isDeleteInstanceDir
+specifier|public
+name|boolean
+name|isDeleteInstanceDir
+parameter_list|()
+block|{
+return|return
+name|deleteInstanceDir
+return|;
+block|}
 annotation|@
 name|Override
 DECL|method|getParams
@@ -2028,6 +2069,17 @@ operator|.
 name|DELETE_DATA_DIR
 argument_list|,
 name|deleteDataDir
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|DELETE_INSTANCE_DIR
+argument_list|,
+name|deleteInstanceDir
 argument_list|)
 expr_stmt|;
 return|return
@@ -2414,6 +2466,42 @@ name|SolrServerException
 throws|,
 name|IOException
 block|{
+return|return
+name|unloadCore
+argument_list|(
+name|name
+argument_list|,
+name|deleteIndex
+argument_list|,
+literal|false
+argument_list|,
+name|server
+argument_list|)
+return|;
+block|}
+DECL|method|unloadCore
+specifier|public
+specifier|static
+name|CoreAdminResponse
+name|unloadCore
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|boolean
+name|deleteIndex
+parameter_list|,
+name|boolean
+name|deleteInstanceDir
+parameter_list|,
+name|SolrServer
+name|server
+parameter_list|)
+throws|throws
+name|SolrServerException
+throws|,
+name|IOException
+block|{
 name|Unload
 name|req
 init|=
@@ -2428,6 +2516,13 @@ operator|.
 name|setCoreName
 argument_list|(
 name|name
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|setDeleteInstanceDir
+argument_list|(
+name|deleteInstanceDir
 argument_list|)
 expr_stmt|;
 return|return
